api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: asw-goodmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asw-goodmusic
  template:
    metadata:
      labels:
        app: asw-goodmusic
    spec:
      containers:
        - name: api-gateway
          image: thomasfarinelli/api-service:latest
          ports:
            - containerPort: 8080
