connessioni-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connessioni-db
  namespace: asw-goodmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connessioni-db
  template:
    metadata:
      labels:
        app: connessioni-db
    spec:
      containers:
        - name: connessioni-db
          image: postgres:latest
          ports:
            - containerPort: 5432
