consul-deloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: asw-goodmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: docker.io/hashicorp/consul
          ports:
            - containerPort: 8500
