kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: asw-goodmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: docker.io/bitnami/kafka:3.8
          ports:
            - containerPort: 9092
            - containerPort: 9093
