recensioniSeguite-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recensioni-seguite
  namespace: asw-goodmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asw-goodmusic
  template:
    metadata:
      labels:
        app: asw-goodmusic
    spec:
      containers:
        - name: recensioni-seguite
          image: thomasfarinelli/recensioni-seguite:latest
          ports:
            - containerPort: 8080
