api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: asw-goodmusic
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: asw-goodmusic
