connessioni-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: connessioni-db
  namespace: asw-goodmusic
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: connessioni-db
