consul-service.yml
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: asw-goodmusic
spec:
  ports:
    - port: 8500
      targetPort: 8500
  selector:
    app: consul
