kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: asw-goodmusic
spec:
  ports:
    - name: kafka-port-1
      port: 9092
      targetPort: 9092
    - name: kafka-port-2
      port: 9093
      targetPort: 9093
  selector:
    app: kafka
