zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: asw-goodmusic
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
